# licanc

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  log.txt
.VSCodeCounter/2025-10-12_21-27-05/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-16_21-45-33/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-17_23-31-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-18_12-18-06/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-18_16-55-56/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-18_21-34-59/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-26_20-20-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-28_20-01-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
LICANWRITE0/: main.lican
glint/driver/: driver.ccm  driver.ixx
hello_world/: main.li
include/: arena.hh  ast.hh  ast_base.hh  ast_core.hh  ast_top.hh  base.hh  core.hh  fcore.hh  licanapi.hh  licanc.hh  parse.hh  sema.hh  semantic.hh  sym_top.hh  symbol.hh  token_base.hh  token_top.hh  util.hh
include/base/: base.hh
include/frontend/: ast.hh
libli/: README.md  _glint.toml  base_traits.li  glint.toml  size.li  string.li
libli/io/: _glint.toml  glint.toml  streamwriter.li
libli/string/: _glint.toml  string.li  (+1 more)
licanc/: CMakeLists.txt  main.cc  main.cxx
licanc/archive/: weird_arena.hh
licanc/build_system/: CMakeLists.txt  README.md  build_system.ccm
licanc/build_system/src/: build_system.cc
licanc/driver/: CMakeLists.txt  README.md  driver.ccm  driver.ixx
licanc/driver/src/: driver.cc
licanc/driver_base/: CMakeLists.txt  driver_base.ixx
licanc/frontend/: CMakeLists.txt  README.md
licanc/frontend/ast/: CMakeLists.txt  ast.ccm  ast.ixx  ast_builder.ixx  ast_class.ixx  ast_deserializer.ixx  ast_nodes.ccm  ast_nodes.ixx  ast_pools.ixx  ast_printer.ixx  ast_serializer.ixx  ast_visitor.ccm  ast_visitor.ixx
licanc/frontend/lex_pass/: CMakeLists.txt  lexer.ixx
licanc/frontend/lex_pass/src/: lexer.cxx
licanc/frontend/parse_pass/: CMakeLists.txt  parser.ccm
licanc/frontend/parse_pass/src/: parser.cc
licanc/frontend/sema/: CMakeLists.txt  ct_expr.ixx  ctexpr.ccm  resolved_type.ccm  resolved_type.ixx  sema.ccm  sema.ixx  sym.ccm  sym_table_class.ixx  syms.ixx  syms_fwd.ccm
licanc/frontend/sema_pass/: CMakeLists.txt  sema_pass.ccm  semantic_analyzer.ccm  sym_registrar.ccm  sym_registrar.ixx
licanc/frontend/sema_pass/src/: semantic_analyzer.cc  semantic_analyzer.cxx  sym_registrar.cxx
licanc/frontend/tok/: CMakeLists.txt  tok.ccm
licanc/include/: base.hh  licanc.hh
licanc/include/frontend/: ast.hh  ast_types.hh  lexer.hh  manager.hh  manager_types.hh  parser.hh  semantic_analyzer.hh  sym.hh  sym_types.hh  token.hh
licanc/include/frontend/scan/: ast.hh  ast_visitor.hh  lexer.hh  parser.hh  tok.hh  token.hh
licanc/include/frontend/sema/: full_passer.hh  resolved_type.hh  sema.hh  semantic_analyzer.hh  sym.hh  sym_registrar.hh  symbol_registerer.hh  symbol_registrar.hh
licanc/include/manager/: manager.hh  manager_types.hh
licanc/include/util/: ansi_format.hh  arena.hh  bitflags.hh  hash.hh  intern_pool.hh  logger.hh  panic.hh  safe_id.hh  span.hh  stream_format.hh  variant_deque.hh  vector_hasher.hh
licanc/manager/: CMakeLists.txt  manager.ccm
licanc/manager/src/: manager.cc
licanc/manager_types/: CMakeLists.txt
licanc/package/: CMakeLists.txt  README.md  package.ixx
licanc/src/: licanc.cc  manager.cc
licanc/src/frontend/: lexer.cc  manager.cc  parser.cc  semantic_analyzer.cc
licanc/src/frontend/scan/: ast.cc  lexer.cc  parser.cc
licanc/src/frontend/sema/: full_passer.cc  semantic_analyzer.cc  sym.cc  sym_registrar.cc  symbol_registerer.cc  symbol_registrar.cc
licanc/src/frontend/util/: span.cc
licanc/src/manager/: manager.cc
licanc/src/util/: arena.cc  logger.cc  panic.cc  span.cc  vector_hasher.cc
licanc/util/: CMakeLists.txt  README.md  ansi_format.ccm  ansi_format.ixx  arena.ccm  arena.ixx  bitflags.ixx  hash.ccm  hash.ixx  intern_pool.ixx  logger.ixx  panic.ccm  panic.ixx  ptr.ixx  safe_id.ixx  span.ccm  span.ixx  util.ccm  util.ixx  vector_hasher.ixx
liproj/: main.lican
liproject/: main.li
src/: CMakeLists.txt  ast.cc  fcore.cc  licanapi.cc  licanc.cc  main.cc  parse.cc  sema.cc  semantic.cc  symbol.cc
src/frontend/: CMakeLists.txt  README.md  lexer.cc
src/frontend/ast/: CMakeLists.txt  ast.ccm  ast.hh  ast_nodes.ccm  ast_reader.ccm  ast_visitor.ccm  ast_visitor.hh  ast_writer.ccm
src/frontend/ast/src/: ast.cc
src/frontend/fcore/: fcore.cc
src/frontend/lex_pass/: CMakeLists.txt  lexer.cc  lexer.hh
src/frontend/lex_pass/src/: lexer.cc
src/frontend/parse_pass/: CMakeLists.txt  parser.ccm  parser.hh
src/frontend/parse_pass/src/: parser.cc
src/frontend/sema/: CMakeLists.txt  resolved_type.ccm  resolved_type.hh  sema.ccm  sym.cc  sym.ccm  sym.hh
src/frontend/sema/src/: sym.cc
src/frontend/sema_pass/: CMakeLists.txt  full_passer.hh  sema_pass.ccm  semantic_analyzer.cc  semantic_analyzer.ccm  semantic_analyzer.hh  sym_registrar.cc  sym_registrar.ccm  sym_registrar.hh
src/frontend/sema_pass/src/: full_passer.cc  semantic_analyzer.cc  sym_registrar.cc
src/frontend/tok/: CMakeLists.txt  tok.ccm  tok.hh
src/util/: CMakeLists.txt  README.md  arena.ccm  arena.hh  bitflags.ccm  hash.ccm  intern_pool.ccm  intern_pool.hh  logger.cc  logger.ccm  logger.hh  panic.ccm  panic.hh  safe_id.ccm  span.ccm  span.hh  util.ccm  vector_hasher.ccm  vector_hasher.hh
(+28 files in other folders)
